Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>This page and the Go! Device extensions are maintained by Vernier Software &amp; Technology (@ VernierSoftwareTechnology) Thanks to Kreg Hanning (<a href="https://github.com/khanning" class="user-mention">@khanning</a>) and the <a href="http://www.scratchfoundation.org/">Scratch Foundation</a> for their support, encouragement and for creating a fun and dynamic tool for teaching and learning.</p>
+<p>This page and the Go! Device extensions are maintained by Vernier Software &amp; Technology (<a href="https://github.com/VernierSoftwareTechnology" class="user-mention">@VernierSoftwareTechnology</a>) Thanks to Kreg Hanning (<a href="https://github.com/khanning" class="user-mention">@khanning</a>) and the <a href="http://www.scratchfoundation.org/">Scratch Foundation</a> for their support, encouragement and for creating a fun and dynamic tool for teaching and learning.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/VernierSoftwareTechnology/scratch-vernier-go-extensions">scratch-vernier-go-extensions</a> is maintained by <a href="https://github.com/VernierSoftwareTechnology">VernierSoftwareTechnology</a>.</span>
