Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,13 +19,65 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
+      <h1>
+<a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h1>
 
-<p>Use data from Vernier <a href="http://www.vernier.com/products/sensors/temperature-sensors/go-temp/">Go! Temp</a> and <a href="http://www.vernier.com/products/sensors/motion-detectors/go-mot/">Go! Motion</a> sensors in your Scratch projects.</p>
+<p>Use data from Vernier <a href="http://www.vernier.com/products/sensors/temperature-sensors/go-temp/">Go!Temp</a> and <a href="http://www.vernier.com/products/sensors/motion-detectors/go-mot/">Go!Motion</a> sensors to bring real world data into your Scratch projects.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<ul>
+<li>Use the Go!Temp extension to obtain a real-time temperature reading from a connected Go!Temp probe.</li>
+<li>Use the Go!Motion extension to obtain a real-time position reading from a connected Go!Motion device.</li>
+</ul>
+
+<hr>
+
+<h1>
+<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Getting Started</h1>
+
+<h2>
+<a id="install-the-scratch-extensions-browser-plugin" class="anchor" href="#install-the-scratch-extensions-browser-plugin" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install the Scratch Extensions Browser Plugin</h2>
+
+<p>You will need to use the Firefox web browser for this extension to work.
+Download and install the <a href="Scratch%20Extensions%20Browser%20Plugin">Scratch Extensions Browser Plugin</a> for "other web browsers"</p>
+
+<p><em>There is an issue with the Chrome version of the Scratch Extensions Browser Plugin that is preventing the Arduino extension from working properly in the Chrome web browser</em></p>
+
+<h2>
+<a id="load-the-vernier-go-extension-on-scratchx" class="anchor" href="#load-the-vernier-go-extension-on-scratchx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Load the Vernier Go! extension on ScratchX</h2>
+
+<p>Launch one of the extensions by going to one of the following URLs:</p>
+
+<p><strong>Go!Temp</strong><br>
+<a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/go_temp_extension.js">http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/go_temp_extension.js</a></p>
+
+<p><strong>Go!Motion</strong><br>
+<a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/go_motion_extension.js">http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/go_motion_extension.js</a></p>
+
+<h2>
+<a id="connect-your-go-device" class="anchor" href="#connect-your-go-device" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Connect your Go! device</h2>
+
+<p>Connect the USB cable of your Go! device to your computer. </p>
+
+<h2>
+<a id="wait-for-the-green-light" class="anchor" href="#wait-for-the-green-light" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wait for the green light</h2>
+
+<p>When you see the indicator light in the "More Blocks" tab turn green you are ready to start using the extension.</p>
+
+<h2>
+<a id="sample-projects" class="anchor" href="#sample-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sample Projects</h2>
+
+<p>There are also a few sample projects that demonstrate how to integrate real world physical measurements into your Scratch projects. Just click one of the follwing URLs:</p>
+
+<ul>
+<li><a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/SayTemp.sbx">SayTemp</a></li>
+<li><a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/DrawTemp.sbx">DrawTemp</a></li>
+<li><a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/SayMotion.sbx">SayMotion</a></li>
+</ul>
+
+<hr>
+
+<h1>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h1>
 
 <p>This page and the Go! Device extensions are maintained by Vernier Software &amp; Technology (<a href="https://github.com/VernierSoftwareTechnology" class="user-mention">@VernierSoftwareTechnology</a>). Special thanks to Kreg Hanning (<a href="https://github.com/khanning" class="user-mention">@khanning</a>) and the <a href="http://www.scratchfoundation.org/">Scratch Foundation</a> for their support, encouragement and for creating a fun and dynamic tool for exploring engineering and programming.</p>
 
