Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p>You will need to use the Firefox web browser for this extension to work.
 Download and install the <a href="Scratch%20Extensions%20Browser%20Plugin">Scratch Extensions Browser Plugin</a> for "other web browsers"</p>
 
-<p><em>There is an issue with the Chrome version of the Scratch Extensions Browser Plugin that is preventing the Arduino extension from working properly in the Chrome web browser</em></p>
+<p><em>There is an issue with the Chrome version of the Scratch Extensions Browser Plugin that prevents the Vernier Go! extensions from working properly in the Chrome web browser on Mac OS X.</em></p>
 
 <h2>
 <a id="load-the-vernier-go-extension-on-scratchx" class="anchor" href="#load-the-vernier-go-extension-on-scratchx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Load the Vernier Go! extension on ScratchX</h2>
