Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <a id="install-the-scratch-extensions-browser-plugin" class="anchor" href="#install-the-scratch-extensions-browser-plugin" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install the Scratch Extensions Browser Plugin</h2>
 
 <p>You will need to use the Firefox web browser for this extension to work.
-Download and install the <a href="Scratch%20Extensions%20Browser%20Plugin">Scratch Extensions Browser Plugin</a> for "other web browsers"</p>
+Download and install the <a href="https://scratch.mit.edu/info/ext_download/">Scratch Extensions Browser Plugin</a> for "other web browsers"</p>
 
 <p><em>There is an issue with the Chrome version of the Scratch Extensions Browser Plugin that prevents the Vernier Go! extensions from working properly in the Chrome web browser on Mac OS X.</em></p>
 
