--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ Download and install the <a href="https://scratch.mit.edu/info/ext_download/">Sc
 <p><em>There is an issue with the Chrome version of the Scratch Extensions Browser Plugin that prevents the Vernier Go! extensions from working properly in the Chrome web browser on Mac OS X.</em></p>
 
 <h2>
-<a id="load-the-vernier-go-extension-on-scratchx" class="anchor" href="#load-the-vernier-go-extension-on-scratchx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Load the Vernier Go! extension on ScratchX</h2>
+<a id="load-the-extension" class="anchor" href="#load-the-extension" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Load the extension</h2>
 
-<p>Launch one of the extensions by going to one of the following URLs:</p>
+<p>Launch one of the Vernier Go! extensions by going to one of the following URLs:</p>
 
 <p><strong>Go!Temp</strong><br>
 <a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/go_temp_extension.js">http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/go_temp_extension.js</a></p>
@@ -61,12 +61,17 @@ Download and install the <a href="https://scratch.mit.edu/info/ext_download/">Sc
 <h2>
 <a id="wait-for-the-green-light" class="anchor" href="#wait-for-the-green-light" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wait for the green light</h2>
 
-<p>When you see the indicator light in the "More Blocks" tab turn green you are ready to start using the extension.</p>
+<p>When you see the indicator light in the "More Blocks" tab turn green you are ready to start using the extension. The green LED on the Go! device should also be lit.</p>
+
+<h2>
+<a id="collect-the-data" class="anchor" href="#collect-the-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Collect the data</h2>
+
+<p>Now the Go! device should be generating a real-time measurement two times every second and you can integrate quantities of temperature or distance into your Scratch projects.</p>
 
 <h2>
 <a id="sample-projects" class="anchor" href="#sample-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sample Projects</h2>
 
-<p>There are also a few sample projects that demonstrate how to integrate real world physical measurements into your Scratch projects. Just click one of the follwing URLs:</p>
+<p>There are also a few sample projects that demonstrate how to integrate real world physical measurements into your Scratch projects. Just click one of the following URLs:</p>
 
 <ul>
 <li><a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/SayTemp.sbx">SayTemp</a></li>
