Edit browser plugin information

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 <h2>
 <a id="install-the-scratch-extensions-browser-plugin" class="anchor" href="#install-the-scratch-extensions-browser-plugin" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install the Scratch Extensions Browser Plugin</h2>
 
-<p>You will need to use the Firefox web browser for this extension to work.
-Download and install the <a href="https://scratch.mit.edu/info/ext_download/">Scratch Extensions Browser Plugin</a> for "other web browsers"</p>
+<p>In order to connect Scratch to a Go! device, you will need to install a web browser plugin. Follow steps 1 and 2 on the
+<a href="https://scratch.mit.edu/info/ext_download/">Scratch Extensions Browser Plugin webpage</a> to download and install the plugin.</p>
 
-<p><em>There is an issue with the Chrome version of the Scratch Extensions Browser Plugin that prevents the Vernier Go! extensions from working properly in the Chrome web browser on Mac OS X.</em></p>
+<p><em>Note: At the moment, you cannot use the Vernier Go! extension in a Chrome web browser on Mac OS X; this is a Chrome-only issue on Mac OS X. The plugin </em>will<em> work in Safari and other Mac web browsers.</p>
+
+<p>The extension should work in any browser (with the plugin installed) on a Windows computer.</em></p>
 
 <h2>
 <a id="load-the-extension" class="anchor" href="#load-the-extension" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Load the extension</h2>
@@ -94,6 +96,6 @@ Download and install the <a href="https://scratch.mit.edu/info/ext_download/">Sc
 
     </section>
 
-  
+
   </body>
 </html>
