Add Technical Details back into documentation page

--- a/index.html
+++ b/index.html
@@ -81,6 +81,28 @@
 <li><a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/SayMotion.sbx">SayMotion</a></li>
 </ul>
 
+<h2>
+<a id="technical-details" class="anchor" href="#sample-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Details about Go! Sensors</h2>
+
+<p>As you begin to use the Go!Temp and Go!Motion sensors in your Scratch projects, there are some technical details about the sensors that are helpful to keep in mind.</p>
+
+<p><strong>Go!Temp</strong><br>
+<p>The Go!Temp will read temperatures between -20°C and 115°C, to an accuracy of +/- 0.5°C. The sensing element in the Go!Temp is located at the very tip of the probe. The sensing element responds in about 4 s to changes in temperatures; the Go!Temp will not measure rapid temperature changes faster than this well.</p>
+
+<p>For additional information about the Go!Temp, refer to the <a href="http://www.vernier.com/files/manuals/go-temp.pdf">Go!Temp user manual</a>.</p>
+
+<p><strong>Go!Motion</strong><br>
+<p>The Go!Motion sensor measures the distance to a person or object between 0.15 and 6 m away, with an accuracy of 2 mm. To measure the distance, the Go!Motion makes a clicking sound, records the time until it hears the sound's echo, and then calculates the distance using a temperature-corrected speed of sound.<br>
+
+<p>The Go!Motion can "see" any object within a cone-shaped area about 15° to 20° off the axis of the center line of the gold foil transducer on the head of the Go!Motion. Note that Go! Motion will report the distance to the closest object that produces a sufficiently strong echo. Go! Motion can pick up objects such as chairs and tables in the cone of ultrasound.<br>
+<br>
+<img src="Go_motion_cone.png">
+
+<p>The Go!Motion has a sensitivity switch located under the pivoting Go!Motion head. The Ball/Walk setting is best for tracking large objects, large distances, and objects that are poor reflectors. The Track setting is best for tracking smaller, closer objects.<br>
+
+<p>For additional information about the Go!Motion, refer to the <a href="http://www.vernier.com/manuals/go-mot/">Go!Motion user manual</a>.<br>
+
+
 <hr>
 
 <h1>
