Updated to include example Go!Link project

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 <li><a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/SayTemp.sbx">SayTemp</a></li>
 <li><a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/DrawTemp.sbx">DrawTemp</a></li>
 <li><a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/SayMotion.sbx">SayMotion</a></li>
+<li><a href="http://scratchx.org/?url=http://verniersoftwaretechnology.github.io/scratch-vernier-go-extensions/examples/SayReading.sbx">SayReading</a></li>
 </ul>
 
 <h2>
