--- a/index.html
+++ b/index.html
@@ -64,31 +64,31 @@
 
 <p>Connect the USB cable of your Go! device to your computer. If you are using the Go!Link, connect one of the following compatible sensors:</p>
 <ul>
-  <li><a href="www.vernier.com/acc-bta">25-g Accelerometer</a></li>
-  <li><a href="www.vernier.com/anm-bta">Anemometer</a></li>
-  <li><a href="www.vernier.com/bar-bta">Barometer</a></li>
-  <li><a href="www.vernier.com/con-bta">Conductivity Probe</a></li>
-  <li><a href="www.vernier.com/dcp-bta">Current Probe</a></li>
-  <li><a href="www.vernier.com/dvp-bta">Differential Voltage Probe</a></li>
-  <li><a href="www.vernier.com/dfs-bta">Dual-Range Force Sensor</a></li>
-  <li><a href="www.vernier.com/fp-bta">Force Plate</a></li>
-  <li><a href="www.vernier.com/gps-bta">Gas Pressure Sensor</a></li>
-  <li><a href="www.vernier.com/hd-bta">Hand Dynamometer</a></li>
-  <li><a href="www.vernier.com/anm-bta">Light Sensor</a></li>
-  <li><a href="www.vernier.com/lga-bta">Low-g Accelerometer</a></li>
-  <li><a href="www.vernier.com/mg-bta">Magnetic Field Sensor</a></li>
-  <li><a href="www.vernier.com/o2-bta">O2 Gas Sensor</a></li>
-  <li><a href="www.vernier.com/odo-bta">Optical Dissolved Oxygen</a></li>
-  <li><a href="www.vernier.com/ph-bta">pH Sensor</a></li>
-  <li><a href="www.vernier.com/sal-bta">Salinity Sensor</a></li>
-  <li><a href="www.vernier.com/sms-bta">Soil Moisture Sensor</a></li>
-  <li><a href="www.vernier.com/slm-bta">Sound Level Meter</a></li>
-  <li><a href="www.vernier.com/sls-bta">Sound Level Sensor</a></li>
-  <li><a href="www.vernier.com/tmp-bta">Stainless Steel Temperature Sensor</a></li>
-  <li><a href="www.vernier.com/sts-bta">Surface Temperature Sensor</a></li>
-  <li><a href="www.vernier.com/tilt-bta">TI Light Sensor</a></li>
-  <li><a href="www.vernier.com/uva-bta">UVA Sensor</a></li>
-  <li><a href="www.vernier.com/ph-bta">UVB Sensor</a></li>
+  <li><a href="http://www.vernier.com/acc-bta">25-g Accelerometer</a></li>
+  <li><a href="http://www.vernier.com/anm-bta">Anemometer</a></li>
+  <li><a href="http://www.vernier.com/bar-bta">Barometer</a></li>
+  <li><a href="http://www.vernier.com/con-bta">Conductivity Probe</a></li>
+  <li><a href="http://www.vernier.com/dcp-bta">Current Probe</a></li>
+  <li><a href="http://www.vernier.com/dvp-bta">Differential Voltage Probe</a></li>
+  <li><a href="http://www.vernier.com/dfs-bta">Dual-Range Force Sensor</a></li>
+  <li><a href="http://www.vernier.com/fp-bta">Force Plate</a></li>
+  <li><a href="http://www.vernier.com/gps-bta">Gas Pressure Sensor</a></li>
+  <li><a href="http://www.vernier.com/hd-bta">Hand Dynamometer</a></li>
+  <li><a href="http://www.vernier.com/anm-bta">Light Sensor</a></li>
+  <li><a href="http://www.vernier.com/lga-bta">Low-g Accelerometer</a></li>
+  <li><a href="http://www.vernier.com/mg-bta">Magnetic Field Sensor</a></li>
+  <li><a href="http://www.vernier.com/o2-bta">O2 Gas Sensor</a></li>
+  <li><a href="http://www.vernier.com/odo-bta">Optical Dissolved Oxygen</a></li>
+  <li><a href="http://www.vernier.com/ph-bta">pH Sensor</a></li>
+  <li><a href="http://www.vernier.com/sal-bta">Salinity Sensor</a></li>
+  <li><a href="http://www.vernier.com/sms-bta">Soil Moisture Sensor</a></li>
+  <li><a href="http://www.vernier.com/slm-bta">Sound Level Meter</a></li>
+  <li><a href="http://www.vernier.com/sls-bta">Sound Level Sensor</a></li>
+  <li><a href="http://www.vernier.com/tmp-bta">Stainless Steel Temperature Sensor</a></li>
+  <li><a href="http://www.vernier.com/sts-bta">Surface Temperature Sensor</a></li>
+  <li><a href="http://www.vernier.com/tilt-bta">TI Light Sensor</a></li>
+  <li><a href="http://www.vernier.com/uva-bta">UVA Sensor</a></li>
+  <li><a href="http://www.vernier.com/ph-bta">UVB Sensor</a></li>
 </ul>
 
 <h2>
@@ -114,7 +114,7 @@
 </ul>
 
 <h2>
-<a id="technical-details" class="anchor" href="#sample-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Details about the Go! Sensors</h2>
+<a id="technical-details" class="anchor" href="#sample-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Details about the Go! Devices</h2>
 
 <p>As you begin to use the Go! devices in your Scratch projects, there are some technical details about the sensors that are helpful to keep in mind.<br>
 
